feat: add photo delete methods
